@@ -64,8 +64,9 @@ macro(DIGIKAM_ADD_GENERIC_PLUGIN)
                           Qt${QT_VERSION_MAJOR}::Core
                           Qt${QT_VERSION_MAJOR}::Gui
                           Qt${QT_VERSION_MAJOR}::Xml
-                          Qt${QT_VERSION_MAJOR}::Network
                           Qt${QT_VERSION_MAJOR}::Widgets
+                          Qt${QT_VERSION_MAJOR}::Network
+                          Qt${QT_VERSION_MAJOR}::NetworkAuth
 
                           KF5::XmlGui
                           KF5::I18n
